<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_label">Units</string>
    <string name="pref_units_default">0</string>
    <string name="show_map">Show map</string>
    <string name="share">Share</string>

</resources>
